UI and README.md updated